# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflow/: workflow.yml
.github/workflows/: workflow.yml
brain_games/: game.py
brain_games/scripts/: brain-even.py  brain_games.py
furycydonian_brain_games.egg-info/: PKG-INFO  SOURCES.txt
