[tool.poetry]
name = "FuryCydonian_brain_games"
version = "0.1.0"
description = "brain games"
authors = ["fury_cydonian <el.fury.oos@gmail.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[[tool.poetry.source]]
name = "brain_games"
url = "https://test.pypi.org/legacy/"
