[tool.poetry]
name = "FuryCydonian_brain_games"
version = "0.1.0"
description = "brain games"
authors = ["fury_cydonian <el.fury.oos@gmail.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain-even:main"

[[tool.poetry.source]]
name = "brain_games"
url = "https://test.pypi.org/legacy/"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

